<resources>
    <string name="app_name">Family\'s Daily</string>

    <!--Login & Register-->
    <string name="etEmail_hint">Email</string>
    <string name="etPwd_hint">Password</string>

    <!--Login-->
    <string name="btnLogin_text">Login</string>
    <string name="goToReg_text"><u>Don\'t have account? Register now.</u></string>

    <!--fbLogin-->
    <string name="facebook_app_id">127165354540034</string>
    <string name="fb_login_protocol_scheme">fb127165354540034</string>

    <!--googleLogin-->
    <string name="google_web_client_id">620695282337-ji5m195rh7spqjd4s089lpmfemm8qa8a.apps.googleusercontent.com</string>

    <!--Register-->
    <string name="btnRegister_text">Register</string>
    <string name="etPwdConf_hint">Re-type Your Password</string>
    <string name="etFName_hint">First Name</string>
    <string name="etLName_hint">Last Name</string>
    <string name="etPhone_hint">Phone</string>
    <string name="etDOB">Date of Birth</string>

    <!-- Add new data -->
    <string name="addData">Add New Data</string>
    <string name="btnAddNewSchedule">Add New Schedule</string>
    <string name="btnAddNewMember">Add New Member</string>
    <string name="btnAddNewNotes">Add New Notes</string>

    <!-- Verification -->
    <string name="verificationTitle">Verify your account</string>
    <string name="btnVerify">Verify Now</string>
    <string name="verificationResend">Send new verification code</string>

    <!--Nav bar-->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_other">Other</string>
    <string name="nav_about_us">About Us</string>

    <!--Add main menu-->
    <string name="add_member">Add Member</string>
    <string name="add_note">Add Note</string>
    <string name="add_schedule">Add Schedule</string>

    <!--Add Member-->
    <string name="etAddMember_hint">Enter your families email</string>

    <!--Create Join Group-->
    <string name="rbCreateGroup">Create Group</string>
    <string name="rbJoinGroup">Join Group</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="etCreateGroup_hint">Enter group name to create</string>
    <string name="etJoinGroup_hint">Enter group code to join</string>
    <string name="etDefaultGroup_hint">Select option</string>
    <string name="label_CreateJoinGroup">Create / Join Group</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="etScheduleDate">Schedule Date</string>
    <string name="etExpireDate">Expire Date</string>
    <string name="btnSelectPicture">Select Picture</string>
    <string name="etProductName">Product Name</string>
    <string name="etScheduleDetail">Schedule Detail</string>
    <string name="tvAddLocation">Add Location (optional)</string>
    <string name="label_AddSchedule">Add New Schedule</string>
    <string name="label_ModifySchedule">Modify Schedule</string>


    <string name="etAddNotesNote">Notes</string>
    <string name="etAddNotesName">Item Name</string>
    <string name="etAddNotesExpired">Expired Date</string>
    <string name="etAddNotesOr">or</string>
    <string name="btnAddNotesTakePhoto">Take Photo</string>
    <string name="label_AddNote">Add New Note</string>
    <string name="label_ModifyNote">Modify Note</string>
    <string name="label_ModifyExpired">Modify Expired</string>
    <string name="browse">Browse</string>


    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
