<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="edu.bluejack16_2.familysdaily.ModifyExpiredActivity">

    <EditText
        android:id="@+id/etModifyProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/etAddNotesName"/>

    <EditText
        android:id="@+id/etModifyExpiredDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_below="@id/etModifyProductName"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/etAddNotesExpired"/>

    <TextView
        android:id="@+id/tvAddNotesOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etModifyExpiredDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:textSize="16dp"
        android:text="@string/etAddNotesOr"/>

    <Button
        android:id="@+id/btnModifyExpiredBrowsePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etModifyExpiredDate"
        android:text="@string/browse"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textSize="10dp"
        android:minWidth="70dp"
        android:minHeight="25dp"
        android:layout_toLeftOf="@id/tvAddNotesOr"/>

    <Button
        android:id="@+id/btnModifyExpiredTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etModifyExpiredDate"
        android:text="@string/btnAddNotesTakePhoto"
        android:layout_marginLeft="8dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textSize="10dp"
        android:minWidth="70dp"
        android:minHeight="25dp"
        android:layout_toRightOf="@id/tvAddNotesOr"/>

    <Button
        android:id="@+id/btnUpdateProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAddNotesOr"
        android:text="@string/update"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btnDeleteProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpdateProduct"
        android:text="@string/delete"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_light"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
