<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="edu.bluejack16_2.familysdaily.ModifyScheduleActivity">

    <EditText
        android:id="@+id/etModifyScheduleDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etScheduleDate"
        android:focusable="false"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etModifyScheduleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etModifyScheduleDate"
        android:hint="@string/etScheduleDetail"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etModifyScheduleLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvAddLocation"
        android:layout_below="@id/etModifyScheduleDetail"
        android:layout_marginTop="30dp"
        android:focusable="false"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/btnUpdateSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etModifyScheduleLocation"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnDeleteSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnUpdateSchedule"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
