<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="edu.bluejack16_2.familysdaily.AddScheduleActivity">

    <EditText
        android:id="@+id/etAddScheduleDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etScheduleDate"
        android:focusable="false"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etAddScheduleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddScheduleDate"
        android:hint="@string/etScheduleDetail"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tvAddLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddLocation"
        android:layout_below="@id/etAddScheduleDetail"
        android:layout_marginTop="30dp"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/btnAddScheduleSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvAddLocation"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
