<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="edu.bluejack16_2.familysdaily.CreateJoinGroupActivity">

    <RelativeLayout
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <RadioButton
            android:id="@+id/rbCreateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbCreateGroup"/>
        <RadioButton
            android:id="@+id/rbJoinGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/rbCreateGroup"
            android:text="@string/rbJoinGroup"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/etGroupName"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/option"
        android:hint="@string/etDefaultGroup_hint"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etGroupName"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
