<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.bluejack16_2.familysdaily.RegisterActivity"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:ems="20"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:hint="@string/etEmail_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_below="@id/etEmail"
            android:layout_marginTop="20dp"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:ems="20"
            android:hint="@string/etPwd_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etPwdConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_below="@id/etPwd"
            android:layout_marginTop="20dp"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:ems="20"
            android:hint="@string/etPwdConf_hint"
            android:inputType="textPassword" />
        <LinearLayout
            android:id="@+id/llNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPwdConf"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <EditText
                android:id="@+id/etFName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/etFName_hint"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white" />

            <EditText
                android:id="@+id/etLName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:layout_toEndOf="@id/etFName"
                android:layout_weight="1"
                android:hint="@string/etLName_hint"
                android:inputType="text" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llNameWrapper"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/white"
            />

        <EditText
            android:id="@+id/etDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:ems="16"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/etDOB"
            android:layout_marginTop="20dp"
            android:layout_below="@id/spGender"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:layout_below="@id/etDOB"
            android:layout_marginTop="20dp"
            android:ems="20"
            android:hint="@string/etPhone_hint"
            android:inputType="phone"
            android:onClick="register"/>

        <Button
            android:id="@+id/btnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etPhone"
            android:width="300dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:text="@string/btnRegister_text"
            android:onClick=""
            android:layout_marginBottom="30dp"/>
    </RelativeLayout>
</ScrollView>