<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="edu.bluejack16_2.familysdaily.ModifyNoteActivity">

    <EditText
        android:id="@+id/etUpdateNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerAddNotesOption"
        android:layout_marginTop="20dp"
        android:hint="@string/etAddNotesNote"/>

    <Button
        android:id="@+id/btnUpdateNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUpdateNote"
        android:text="@string/update"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpdateNote"
        android:text="@string/delete"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_light"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
