<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="edu.bluejack16_2.familysdaily.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/ToolbarMain"
            android:layout_width="match_parent"
            android:elevation="6dp"
            android:layout_height="wrap_content"
            android:titleTextColor="@android:color/white"
            app:titleTextColor="@android:color/white"
            android:background="@color/colorPrimary"
            >

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/TabLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ToolbarMain"
            android:background="@color/colorPrimary"
            android:elevation="6dp"
            android:minHeight="10dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/ViewPagerMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TabLayoutMain"/>
    </RelativeLayout>
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:menu_fab_label="Choose an action"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccentDark"
        app:menu_colorRipple="@color/colorAccentLight"
        app:menu_showShadow="true"
        app:menu_labels_colorNormal="#333333"
        app:menu_labels_colorPressed="#444444"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_showShadow="true"
        app:menu_labels_maxLines="-1"
        app:menu_labels_position="left"
        app:menu_openDirection="up"
        app:menu_shadowColor="#66000000"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        android:layout_margin="16dp"
        >
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_member"
            app:fab_label="@string/add_member"
            app:fab_size="mini"
            />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_note"
            app:fab_label="@string/add_note"
            app:fab_size="mini"
            />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_schedule"
            app:fab_label="@string/add_schedule"
            app:fab_size="mini"
            />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>